Refactor form and add product submission script

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Painel Admin</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<form id="form">
+  <input type="text" name="title" placeholder="Nome" required />
+  <input type="number" name="price" placeholder="Preço" required />
+  <input type="text" name="affiliate_link" placeholder="Link afiliado" />
+  <input type="number" name="rating" step="0.1" />
+  <input type="file" name="image" accept="image/*" required />
+  <button>Salvar</button>
+</form>
 
-  <h1>Adicionar Produto</h1>
+<script>
+document.getElementById("form").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const formData = new FormData(e.target);
 
-  <form id="productForm">
-    <input type="text" placeholder="Título do produto" id="title" required />
-    <input type="number" placeholder="Preço" id="price" required />
-    <input type="text" placeholder="URL da imagem" id="image" required />
-    <input type="text" placeholder="Link afiliado" id="affiliate_link" required />
-    <button type="submit">Salvar Produto</button>
-  </form>
+  await fetch("https://back-end-comparex.onrender.com/products", {
+    method: "POST",
+    body: formData
+  });
 
-  <p id="msg"></p>
-
-  <script src="admin.js"></script>
-</body>
-</html>
+  alert("Produto salvo!");
+});
+</script>
