--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <button>Salvar</button>
 </form>
 
-<script>
+<script src="/adimin.js">
 document.getElementById("form").addEventListener("submit", async (e) => {
   e.preventDefault();
   const formData = new FormData(e.target);
