Refactor index.html with improved form and styles

--- a/index.html
+++ b/index.html
@@ -1,22 +1,134 @@
-<form id="form">
-  <input type="text" name="title" placeholder="Nome" required />
-  <input type="number" name="price" placeholder="Preço" required />
-  <input type="text" name="affiliate_link" placeholder="Link afiliado" />
-  <input type="number" name="rating" step="0.1" />
-  <input type="file" name="image" accept="image/*" required />
-  <button>Salvar</button>
-</form>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Painel Admin - Busca Shop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script src="/adimin.js">
-document.getElementById("form").addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const formData = new FormData(e.target);
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
 
-  await fetch("https://back-end-comparex.onrender.com/products", {
-    method: "POST",
-    body: formData
+    body {
+      background: #0f172a;
+      color: #e5e7eb;
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    form {
+      max-width: 500px;
+      margin: auto;
+      background: #020617;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    input, button {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 12px;
+      border-radius: 5px;
+      border: none;
+      font-size: 16px;
+    }
+
+    input {
+      background: #1e293b;
+      color: #fff;
+    }
+
+    button {
+      background: #22c55e;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    .preview {
+      text-align: center;
+      margin-top: 15px;
+    }
+
+    .preview img {
+      max-width: 150px;
+      border-radius: 6px;
+      margin-top: 10px;
+    }
+
+    pre {
+      background: #020617;
+      padding: 15px;
+      border-radius: 6px;
+      margin-top: 20px;
+      overflow-x: auto;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+
+    .info {
+      font-size: 14px;
+      opacity: 0.8;
+      margin-top: 10px;
+      text-align: center;
+    }
+  </style>
+</head>
+
+<body>
+
+  <h1>Painel Admin</h1>
+
+  <form id="form">
+    <input id="title" placeholder="Nome do produto" required>
+    <input id="price" type="number" step="0.01" placeholder="Preço (ex: 79.90)" required>
+    <input id="image" placeholder="Nome da imagem (ex: fone.jpg)" required>
+    <input id="link" placeholder="Link afiliado" required>
+    <button type="submit">Gerar Produto</button>
+  </form>
+
+  <div class="preview" id="preview"></div>
+
+  <pre id="output"></pre>
+
+  <div class="info">
+    📁 Coloque as imagens na pasta <b>/images</b><br>
+    📄 Copie o JSON e cole em <b>products.json</b>
+  </div>
+
+<script>
+  const form = document.getElementById("form");
+  const preview = document.getElementById("preview");
+  const output = document.getElementById("output");
+
+  form.addEventListener("submit", e => {
+    e.preventDefault();
+
+    const produto = {
+      title: title.value,
+      price: Number(price.value),
+      image: "images/" + image.value,
+      affiliate_link: link.value
+    };
+
+    preview.innerHTML = `
+      <p>Preview:</p>
+      <img src="${produto.image}" onerror="this.style.display='none'">
+    `;
+
+    output.textContent = JSON.stringify(produto, null, 2);
   });
-
-  alert("Produto salvo!");
-});
 </script>
+
+</body>
+</html>
