Enhance form with platform selection and buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       border-radius: 8px;
     }
 
-    input, button {
+    input, select, button {
       width: 100%;
       padding: 12px;
       margin-bottom: 12px;
@@ -39,7 +39,7 @@
       font-size: 16px;
     }
 
-    input {
+    input, select {
       background: #1e293b;
       color: #fff;
     }
@@ -49,6 +49,15 @@
       color: #000;
       font-weight: bold;
       cursor: pointer;
+    }
+
+    button.secondary {
+      background: #38bdf8;
+    }
+
+    button.danger {
+      background: #ef4444;
+      color: #fff;
     }
 
     button:hover {
@@ -73,7 +82,6 @@
       margin-top: 20px;
       overflow-x: auto;
       white-space: pre-wrap;
-      word-break: break-word;
     }
 
     .info {
@@ -87,29 +95,43 @@
 
 <body>
 
-  <h1>Painel Admin</h1>
+<h1>Painel Admin</h1>
 
-  <form id="form">
-    <input id="title" placeholder="Nome do produto" required>
-    <input id="price" type="number" step="0.01" placeholder="Preço (ex: 79.90)" required>
-    <input id="image" placeholder="Nome da imagem (ex: fone.jpg)" required>
-    <input id="link" placeholder="Link afiliado" required>
-    <button type="submit">Gerar Produto</button>
-  </form>
+<form id="form">
+  <input id="title" placeholder="Nome do produto" required>
+  <input id="price" type="number" step="0.01" placeholder="Preço (ex: 79.90)" required>
 
-  <div class="preview" id="preview"></div>
+  <select id="platform" required>
+    <option value="">Selecione a plataforma</option>
+    <option value="aliexpress">AliExpress</option>
+    <option value="shopee">Shopee</option>
+    <option value="mercadolivre">Mercado Livre</option>
+    <option value="shein">Shein</option>
+  </select>
 
-  <pre id="output"></pre>
+  <input id="image" placeholder="Nome da imagem (ex: produto.png)" required>
+  <input id="link" placeholder="Link afiliado" required>
 
-  <div class="info">
-    📁 Coloque as imagens na pasta <b>/images</b><br>
-    📄 Copie o JSON e cole em <b>products.json</b>
-  </div>
+  <button type="submit">Adicionar Produto</button>
+  <button type="button" class="secondary" onclick="copiarJSON()">Copiar JSON</button>
+  <button type="button" class="danger" onclick="limparTudo()">Limpar Tudo</button>
+</form>
+
+<div class="preview" id="preview"></div>
+
+<pre id="output">[]</pre>
+
+<div class="info">
+  📁 Imagens em <b>/images</b><br>
+  📄 Copie o array e cole em <b>products.json</b>
+</div>
 
 <script>
   const form = document.getElementById("form");
   const preview = document.getElementById("preview");
   const output = document.getElementById("output");
+
+  let produtos = [];
 
   form.addEventListener("submit", e => {
     e.preventDefault();
@@ -118,16 +140,32 @@
       title: title.value,
       price: Number(price.value),
       image: "images/" + image.value,
-      affiliate_link: link.value
+      affiliate_link: link.value,
+      platform: platform.value
     };
+
+    produtos.push(produto);
 
     preview.innerHTML = `
       <p>Preview:</p>
       <img src="${produto.image}" onerror="this.style.display='none'">
+      <p>${produto.title}</p>
     `;
 
-    output.textContent = JSON.stringify(produto, null, 2);
+    output.textContent = JSON.stringify(produtos, null, 2);
+    form.reset();
   });
+
+  function copiarJSON() {
+    navigator.clipboard.writeText(output.textContent);
+    alert("JSON copiado com sucesso!");
+  }
+
+  function limparTudo() {
+    produtos = [];
+    output.textContent = "[]";
+    preview.innerHTML = "";
+  }
 </script>
 
 </body>
