Change AliExpress option value in select dropdown

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <select id="platform" required>
     <option value="">Selecione a plataforma</option>
-    <option value="aliexpress">AliExpress</option>
+    <option value="000">AliExpress</option>
     <option value="shopee">Shopee</option>
     <option value="mercadolivre">Mercado Livre</option>
     <option value="shein">Shein</option>
