Update platform options in index.html

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
   <select id="platform" required>
     <option value="">Selecione a plataforma</option>
     <option value="000">AliExpress</option>
-    <option value="shopee">Shopee</option>
-    <option value="mercadolivre">Mercado Livre</option>
-    <option value="shein">Shein</option>
+    <option value="111">Shopee</option>
+    <option value="333">Mercado Livre</option>
+    <option value="222">Shein</option>
   </select>
 
   <input id="image" placeholder="Nome da imagem (ex: produto.png)" required>
